# mapsheat

./: .gitignore  .replit  README.md  app.py  pyproject.toml  requirements.txt
.history/: .gitignore_20250416192758  .gitignore_20250416195433  .gitignore_20250416195454  requirements_20250416200721.txt
.history/utils/: visualization_20250416181822.py  visualization_20250416182308.py
.streamlit/: config.toml
attached_assets/: Pasted-Microclimate-Analysis-Platform-for-Urban-Heat-Islands-Implementation-Guide-Based-on-the-image-you-1744786206672.txt
pages/: about.py  analysis.py  community_input.py
utils/: api_handlers.py  data_processing.py  visualization.py
